<resources>
    <string name="app_name">Lokalizator Szpitali</string>
    <string name="title_activity_maps">Znajdź szpital</string>
    <string name="close_button">Wróć do mapy</string>
    <string name="name_const">Nazwa:</string>
    <string name="address_const">Adres:</string>
    <string name="kinds_const">Odziały:</string>
    <string name="rewiew">Aktualna ocena:</string>
    <string name="review_count">Ilość ocen:</string>
    <string name="rateButton">Oceń</string>
    <string name="location_permission_denied" />
    <string name="permission_required_toast" />
    <string name="permission_rationale_location" />
    <string name="info_const">Uwagi:</string>
</resources>
